contrib/haskell/src/Hkl/C.hsc

{-# LANGUAGE ForeignFunctionInterface #-}
{-# LANGUAGE GADTs #-}
{-# LANGUAGE CPP #-}

module Hkl.C
       ( compute
       , geometryDetectorRotationGet
       , solve
       , solveTraj
       , solveTrajPipe
       ) where

import Prelude hiding (min, max)

import Control.Monad (void, forever)
import Control.Monad.Loops (unfoldrM)
import Control.Monad.Trans.State.Strict
import Numeric.LinearAlgebra
import Foreign ( ForeignPtr
               , FunPtr
               , Ptr
               , nullPtr
               , newForeignPtr
               , withForeignPtr
               , peekArray
               , withArray)
import Foreign.C (CInt(..), CDouble(..), CSize(..), CString,
                 peekCString, withCString)
import Foreign.Storable
import Hkl.Types
import Hkl.Detector
import Numeric.Units.Dimensional.Prelude ( meter, degree, radian, nano
                                         , (*~), (/~))
import Pipes (Pipe, await, lift, yield)

import qualified Data.Vector.Storable as V
import qualified Data.Vector.Storable.Mutable as MV

#include "hkl.h"

-- private types

data HklDetector
data HklEngine
data HklEngineList
data HklFactory
data HklGeometry
data HklGeometryList
data HklGeometryListItem
data HklLattice
data HklMatrix
data HklQuaternion
data HklSample

-- helpers

peekDArrayString :: Ptr () -> IO [CString]
peekDArrayString p = do
  n <- (#{peek darray_string, size} p) :: IO CSize
  items <- #{peek darray_string ,item} p :: IO (Ptr CString)
  peekArray (fromEnum n) items

darrayStringLen :: Ptr () -> IO (CSize)
darrayStringLen p = do
    n <- (#{peek darray_string, size} p) :: IO CSize
    return n

-- Engine

solve' :: Ptr HklEngine -> CSize -> Engine -> IO (ForeignPtr HklGeometryList)
solve' engine n (Engine _ ps _) = do
  let positions = [v | (Parameter _ v _) <- ps]
  withArray positions $ \values ->
      c_hkl_engine_pseudo_axis_values_set engine values n unit nullPtr
      >>= newForeignPtr c_hkl_geometry_list_free

solve :: Geometry -> Detector a -> Sample -> Engine -> IO [Geometry]
solve g@(Geometry f _ _ _) d s e@(Engine name _ _) = do
  withSample s $ \sample ->
      withDetector d $ \detector ->
          withGeometry g $ \geometry ->
              withEngineList f $ \engines ->
                  withCString name $ \cname -> do
                  c_hkl_engine_list_init engines geometry detector sample
                  engine <- c_hkl_engine_list_engine_get_by_name engines cname nullPtr
                  n <- c_hkl_engine_pseudo_axis_names_get engine >>= darrayStringLen
                  solve' engine n e >>= peekHklGeometryList

getSolution0 :: ForeignPtr HklGeometryList -> IO Geometry
getSolution0 gl = withForeignPtr gl $ \solutions ->
                  c_hkl_geometry_list_items_first_get solutions
                  >>= c_hkl_geometry_list_item_geometry_get
                  >>= peekGeometry

engineName :: Engine -> String
engineName (Engine name _ _) = name

solveTraj :: Geometry -> Detector a -> Sample -> [Engine] -> IO [Geometry]
solveTraj g@(Geometry f _ _ _) d s es = do
  let name = engineName (head es)
  withSample s $ \sample ->
      withDetector d $ \detector ->
          withGeometry g $ \geometry ->
              withEngineList f $ \engines ->
                withCString name $ \cname -> do
                  c_hkl_engine_list_init engines geometry detector sample
                  engine <- c_hkl_engine_list_engine_get_by_name engines cname nullPtr
                  n <- c_hkl_engine_pseudo_axis_names_get engine >>= darrayStringLen
                  mapM (\e -> solve' engine n e >>= getSolution0) es

-- Pipe

data Diffractometer = Diffractometer { difEngineList :: (ForeignPtr HklEngineList)
                                     , difGeometry :: (ForeignPtr HklGeometry)
                                     , difDetector :: (ForeignPtr HklDetector)
                                     , difSample :: (ForeignPtr HklSample)
                                     }
                    deriving (Show)

withDiffractometer :: Diffractometer -> (Ptr HklEngineList -> IO b) -> IO b
withDiffractometer d fun = do
  let f_engines = difEngineList d
  withForeignPtr f_engines fun

newDiffractometer :: Geometry -> Detector a -> Sample -> IO Diffractometer
newDiffractometer g@(Geometry f _ _ _) d s = do
  f_engines <- newEngineList f
  f_geometry <- newGeometry g
  f_detector <- newDetector d
  f_sample <- newSample s
  withForeignPtr f_sample $ \sample ->
    withForeignPtr f_detector $ \detector ->
    withForeignPtr f_geometry $ \geometry ->
    withForeignPtr f_engines $ \engines -> do
      c_hkl_engine_list_init engines geometry detector sample
      return $ Diffractometer { difEngineList = f_engines
                              , difGeometry = f_geometry
                              , difDetector = f_detector
                              , difSample = f_sample
                              }

solveTrajPipe :: Geometry -> Detector a -> Sample -> Pipe Engine Geometry IO ()
solveTrajPipe g d s = do
  dif <- lift $ newDiffractometer g d s
  solveTrajPipe' dif

solveTrajPipe' :: Diffractometer -> Pipe Engine Geometry IO ()
solveTrajPipe' dif = flip evalStateT dif $ forever $ do
    -- Inside here we are using `StateT Diffractometer (Pipe Engine Geometry IO ()) r`
    e <- lift await
    dif_ <- get
    let name = engineName e
    solutions <- lift . lift $ withDiffractometer dif_ $ \engines ->
     withCString name $ \cname -> do
       engine <- c_hkl_engine_list_engine_get_by_name engines cname nullPtr
       n <- c_hkl_engine_pseudo_axis_names_get engine >>= darrayStringLen
       solve' engine n e >>= getSolution0
    put dif_
    lift $ yield solutions

foreign import ccall unsafe "hkl.h hkl_engine_list_engine_get_by_name"
  c_hkl_engine_list_engine_get_by_name :: Ptr HklEngineList --engine list
                                       -> CString -- engine name
                                       -> Ptr () --  gerror need to deal about this
                                       -> IO (Ptr HklEngine) -- the returned HklEngine

foreign import ccall unsafe "hkl.h hkl_engine_pseudo_axis_values_set"
  c_hkl_engine_pseudo_axis_values_set :: Ptr HklEngine
                                      -> Ptr Double --values
                                      -> CSize -- n_values
                                      -> CInt -- unit_type
                                      -> Ptr () --  GError **error
                                      -> IO (Ptr HklGeometryList)

foreign import ccall unsafe "hkl.h &hkl_geometry_list_free"
  c_hkl_geometry_list_free :: FunPtr (Ptr HklGeometryList -> IO ())

-- Factory

newFactory :: Factory -> IO (Ptr HklFactory)
newFactory f = withCString (show f) $ \cname -> c_hkl_factory_get_by_name cname nullPtr

foreign import ccall unsafe "hkl.h hkl_factory_get_by_name"
  c_hkl_factory_get_by_name :: CString  -- ^ name
                            -> Ptr () -- ^ GError (null for now)
                            -> IO (Ptr HklFactory)
-- Geometry

peekGeometry :: Ptr HklGeometry -> IO (Geometry)
peekGeometry gp = do
  f_name <- c_hkl_geometry_name_get gp >>= peekCString
  let factory = factoryFromString f_name
  (CDouble w) <- c_hkl_geometry_wavelength_get gp unit
  darray <- c_hkl_geometry_axis_names_get gp
  n <- darrayStringLen darray
  v <- MV.new (fromEnum n)
  MV.unsafeWith v $ \values ->
      c_hkl_geometry_axis_values_get gp values n unit
  vs <- V.freeze v

  axis_names <- peekDArrayString darray
  ps <- mapM (getAxis gp) axis_names
  return $ Geometry factory (Source (w *~ nano meter)) vs (Just ps)
      where
        getAxis :: Ptr HklGeometry -> CString -> IO Parameter
        getAxis _g n = c_hkl_geometry_axis_get _g n nullPtr >>= peek

foreign import ccall unsafe "hkl.h hkl_geometry_wavelength_get"
  c_hkl_geometry_wavelength_get :: Ptr HklGeometry -- geometry
                                -> CInt -- unit
                                -> IO CDouble -- wavelength


foreign import ccall unsafe "hkl.h hkl_geometry_axis_values_get"
  c_hkl_geometry_axis_values_get :: Ptr HklGeometry -- geometry
                                 -> Ptr Double -- axis values
                                 -> CSize -- size of axis values
                                 -> CInt -- unit
                                 -> IO () -- IO CInt but for now do not deal with the errors

foreign import ccall unsafe "hkl.h hkl_geometry_axis_names_get"
  c_hkl_geometry_axis_names_get :: Ptr HklGeometry -- goemetry
                                -> IO (Ptr ()) -- darray_string

foreign import ccall unsafe "hkl.h hkl_geometry_axis_get"
  c_hkl_geometry_axis_get :: Ptr HklGeometry -- geometry
                          -> CString -- axis name
                          -> Ptr () -- gerror
                          -> IO (Ptr Parameter) -- parameter or nullPtr

foreign import ccall unsafe "hkl.h hkl_geometry_name_get"
  c_hkl_geometry_name_get :: Ptr HklGeometry -> IO CString


withGeometry ::  Geometry -> (Ptr HklGeometry -> IO b) -> IO b
withGeometry g fun = do
  fptr <- newGeometry g
  withForeignPtr fptr fun

newGeometry :: Geometry -> IO (ForeignPtr HklGeometry)
newGeometry (Geometry f (Source lw) vs _ps) = do
  let wavelength = CDouble (lw /~ nano meter)
  factory <- newFactory f
  geometry <- c_hkl_factory_create_new_geometry factory
  c_hkl_geometry_wavelength_set geometry wavelength unit nullPtr
  darray <- c_hkl_geometry_axis_names_get geometry
  n <- darrayStringLen darray
  V.unsafeWith vs $ \values ->
      c_hkl_geometry_axis_values_set geometry values n unit nullPtr

  newForeignPtr c_hkl_geometry_free geometry

foreign import ccall unsafe "hkl.h hkl_factory_create_new_geometry"
  c_hkl_factory_create_new_geometry :: Ptr HklFactory -> IO (Ptr HklGeometry)

foreign import ccall unsafe "hkl.h &hkl_geometry_free"
  c_hkl_geometry_free :: FunPtr (Ptr HklGeometry -> IO ())

foreign import ccall unsafe "hkl.h hkl_geometry_wavelength_set"
  c_hkl_geometry_wavelength_set :: Ptr HklGeometry -- geometry
                                -> CDouble -- wavelength
                                -> CInt -- unit
                                -> Ptr () -- *gerror
                                -> IO () -- IO CInt but for now do not deal with the errors

foreign import ccall unsafe "hkl.h hkl_geometry_axis_values_set"
  c_hkl_geometry_axis_values_set :: Ptr HklGeometry -- geometry
                                 -> Ptr Double -- axis values
                                 -> CSize -- size of axis values
                                 -> CInt -- unit
                                 -> Ptr () -- gerror
                                 -> IO () -- IO CInt but for now do not deal with the errors

-- geometryName :: ForeignPtr HklGeometry -> IO String
-- geometryName g = withForeignPtr g (c_hkl_geometry_name_get >=> peekCString)

-- HklGeometryList

buildMatrix' :: Element a => CInt -> CInt -> ((CInt, CInt) -> IO a) -> IO (Matrix a)
buildMatrix' rc cc f = do
   let coordinates' = map (\ ri -> map (\ ci -> (ri, ci)) [0 .. (cc - 1)]) [0 .. (rc - 1)]
   l <- mapM (mapM f) coordinates'
   return $ fromLists l


    -- fromLists $ map (map f)
    --     $ map (\ ri -> map (\ ci -> (ri, ci)) [0 .. (cc - 1)]) [0 .. (rc - 1)]
